--- a/frontend/src/css/Donatepage.css
+++ b/frontend/src/css/Donatepage.css
@@ -1,5 +1,7 @@
 .mainn{
     margin-left: 34rem;
+    width: 50%;
+
 }
 
 
@@ -28,3 +30,29 @@
 }
 
 
+.wrapper {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form-control {
+    border-radius: 10px;
+}
+
+.table {
+    width: 100%;
+}
+button {
+    border-radius: 10px;
+    padding: 5px;
+}
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 500,
+  'GRAD' 0,
+  'opsz' 48
+}
