--- a/frontend/src/css/SignIn.css
+++ b/frontend/src/css/SignIn.css
@@ -3,52 +3,167 @@
 * {
   font-family: "Nunito", sans-serif;
 }
-
-.signIn {
-  background-repeat: no-repeat;
-  margin-left: 20.5rem;
-  /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSB1lN1hGZAj0MpZ1ZoN7tt7q38JyzTvjmSMQ&usqp=CAU"); */
-  background-size: cover;
-  background-size: 100rem;
-  flex: 1;
+.banner{
+  height: 4rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  margin: 3rem;
 }
 
-.loginForm {
-  background-color: #fbfbfb;
-  padding: 30px;
-  border: 1px solid rgb(129, 121, 121);
-  border-radius: 1px;
+#logo{
+    border-radius: 50%;
+    height: 4rem;
+  
+}
+
+.banner h1{
+    width: 25rem;
+    
+}
+
+.aboutus{
+  text-decoration: none;
+  color: black;
+  font-size: 2rem;
+  font-weight: 600;
+  margin-left: 26rem;
+  width: 40rem;
+  padding-top: 1rem;
+ 
+
+  
+}
+
+#Aboutus{
+ 
+}
+.signIn {
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 2px 2px 9px rgb(170, 170, 170);
+    margin-left: 8rem;
+    margin-right: 8rem;
+    border-radius: 2rem;
+}
+.middle{
   border-radius: 1rem;
+  margin: 2.5rem;
+  width: 0.2rem;
+  height: 35rem;
+  background-color: rgba(0,168,255,1);
+  animation-duration: 3s;
+  animation-name:paAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  opacity: 0;
+}
+.left{
+  background: rgb(8,70,119);
+  background: linear-gradient(90deg, rgba(8,70,119,1) 0%, rgba(0,168,255,1) 100%);
+  width: 50rem;
+  height: 40rem;
+  border-radius: 2rem;
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  
+}
+.left h1{
+  color: #ffffff;
+  padding-top: 2rem;
+  animation-duration: 3s;
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.left p{
+  color: #ffffff;
+  font-size: 1.5rem;
+  margin: 4rem;
+  animation-duration: 4s;
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  opacity: 0;
+}
+.loginForm {
+  background-color: #ffffff;
+  padding: 30px;
   width: 24rem;
   height: 23rem;
-  box-shadow: 2px 2px 8px rgb(129, 121, 121);
+  margin-right: 6rem;
+  padding-top: 4rem;
+  animation-duration: 3s;
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  opacity: 0;
+
+}
+
+@keyframes pAnimation {
+  50% {
+    visibility: hidden;
+    opacity: 0.1;
+    
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes paAnimation {
+  50% {
+    visibility: hidden;
+    opacity: 0.1;
+    height: 0;
+    
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 .loginForm2 {
-  background-color: #ffffff;
+  background-color: rgba(0,168,255,1);
+  color: white;
   padding: 20px;
-  margin-top: 5px;
-  border: 1px solid rgb(129, 121, 121);
-  border-radius: 1rem;
+  margin-top: 3rem;
+ 
+
+}
+
+@keyframes slide {
+  0% {
+    width: 0;
+    
+  }
+  100% {
+    width:50rem;
+  }
+  
 }
 
 .signIn input {
   height: 3.5rem;
   border-radius: 1.2rem;
   border: none;
-
+  background-color: rgb(243, 251, 255);
+  padding-left: 2rem;
   margin-top: 0.8rem;
+  
 }
 
 #login-btn {
   font-size: 1rem;
-  margin-top: 3rem;
+  margin-top: 1rem;
   border-radius: 1.2rem;
   border: none;
-  background-color: #1773ea;
+  background-color: rgba(0,168,255,1);
   border: none;
 
   color: white;
