--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -11,6 +11,7 @@
   border-right: 1px solid rgb(219, 219, 219);
   border-radius: 1rem;
   margin-left: 1rem ;
+  margin-top: 6rem;
   padding: 0;
   width: 17%;
   box-shadow: 2px 2px 9px rgb(218, 218, 218);
