--- a/frontend/src/css/Request.css
+++ b/frontend/src/css/Request.css
@@ -57,3 +57,64 @@
 
   cursor: pointer;
 }
+
+.allCards {
+  margin-top: 5rem;
+  height: max-content;
+  width: 90rem;
+  margin-left: 25rem;
+  position: absolute;
+ 
+}
+.Cards {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+}
+
+.Card {
+
+  margin-left: 3rem;
+  align-items: center;
+  border: 2px;
+  border-radius: 1rem;
+  box-shadow: 2px 2px 9px rgb(212, 212, 212);
+  text-align: center;
+}
+
+#title{
+  font-size: 1.5rem;
+  background-color: rgb(125, 212, 255);
+  margin: 1rem;
+  border-radius: 1rem;
+  color: white;
+  height: 2.5rem;
+  padding-top: 1rem;
+}
+
+#req_button{
+  background-image: linear-gradient(-180deg, rgb(4, 230, 0) 0%, #01a42ac1 100%);
+  border-radius: .5rem;
+  color: #FFFFFF;
+  font-size: 16px;
+  justify-content: center;
+  text-decoration: none;
+  width: 50%;
+  border: 0;
+  height: 3rem;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#req_button:hover {
+  background-image: linear-gradient(-180deg, rgb(3, 198, 0) 0%, #00d736 100%);
+}
+
+@media (min-width: 768px) {
+  #req_button{
+    padding: 1rem 2rem;
+  }
+}
