--- a/frontend/src/css/Hnavbar.css
+++ b/frontend/src/css/Hnavbar.css
@@ -11,6 +11,14 @@
     top: 0;
     width: 98%;
 }
+
+.Hnavb{
+    top: 0;
+    position: fixed;
+    background-color: white;
+    height: 5rem;
+    width: 100%;
+}
 .logo{
     display: flex;
     
