--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -6,7 +6,7 @@
 
 .donate {
   background-repeat: no-repeat;
-  margin-left: 20.5rem;
+  margin-left:0%;
   /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSB1lN1hGZAj0MpZ1ZoN7tt7q38JyzTvjmSMQ&usqp=CAU"); */
   background-size: cover;
   background-size: 100rem;
@@ -15,16 +15,54 @@
   justify-content: center;
   align-items: center;
 }
+.contentt{
+  margin-top: 7rem;
+  width: 80%;
+}
+.contentt h1{
+  text-align: start;
+  padding-left: 6rem;
+}
+.contentt ul li{
+  width: 90%;
+  height: min-content;
+  align-items: center;
+}
+
+.contentt  li .p1{
+  margin-left: 4rem;
+  width: 100%;
+  text-align: start;
+}
+
+.contentt  li .p2{
+  text-align: center;
+  margin-right: 2rem;
+  width: 100%;
+ 
+}
+
+.contentt  li .p3{
+  text-align: center;
+  margin-right: 2rem;
+  width: 100%;
+ 
+}
+.contentt  li .pm{
+  text-align: start;
+  margin-right: 2rem;
+  width: 100%;
+ 
+}
 
 .donateForm {
   background-color: #fbfbfb;
   padding: 30px;
-  border: 1px solid rgb(129, 121, 121);
-  border-radius: 1px;
+
   border-radius: 1rem;
   width: 24rem;
   height: 23rem;
-  box-shadow: 2px 2px 8px rgb(129, 121, 121);
+
 }
 
 .loginForm2 {
@@ -56,4 +94,11 @@
   padding: 5px 10px;
 
   cursor: pointer;
+}
+
+
+#lin{
+  width: 80%;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
