--- a/frontend/src/css/SignIn.css
+++ b/frontend/src/css/SignIn.css
@@ -44,12 +44,14 @@
     margin-left: 8rem;
     margin-right: 8rem;
     border-radius: 2rem;
+    height: 38rem;
+    
 }
 .middle{
   border-radius: 1rem;
   margin: 2.5rem;
   width: 0.2rem;
-  height: 35rem;
+  height: 85%;
   background-color: rgba(0,168,255,1);
   animation-duration: 3s;
   animation-name:paAnimation;
@@ -61,7 +63,7 @@
   background: rgb(8,70,119);
   background: linear-gradient(90deg, rgba(8,70,119,1) 0%, rgba(0,168,255,1) 100%);
   width: 50rem;
-  height: 40rem;
+  
   border-radius: 2rem;
   animation-name: slide;
   animation-duration: 2s;
