--- a/frontend/src/css/Volunteer.css
+++ b/frontend/src/css/Volunteer.css
@@ -14,3 +14,27 @@
   top: 40%;
   
 }
+
+#voldiv {
+  display: flex;
+  align-items: center;
+}
+.becm {
+  position: absolute;
+    left: 50%;
+}
+
+#volbtn {
+  margin: 35px;
+
+  font-size: 1rem;
+  margin-top: 3rem;
+  border-radius: 1.2rem;
+  border: none;
+  background-color: #1773ea;
+  border: none;
+  color: white;
+  font-weight: bold;
+  padding: 5px 10px;
+  cursor: pointer;
+}
