--- a/frontend/src/css/Volunteer.css
+++ b/frontend/src/css/Volunteer.css
@@ -1,18 +1,40 @@
-#verify-btn {
-  color: lightgreen;
-}
 
-.volunteer_cunt{
-  position: absolute;
+
+.volunteer_cunt {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  width: 70%;
   margin-left: 10%;
-  top: 10%;
+  margin-top: 10%;
 }
-.volunteer_btn{
-  position: absolute;
-  margin-left: 50%;
 
-  top: 40%;
+.volunteer_cunt > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
   
+  width: 60%;
+  border-radius: 25px;
+  background-color: #80d4fc;
+}
 
-  
+.volunteer_cunt p {
+  margin: 3px;
+}
+
+#verify-btn {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #00fb0d;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.h3{
+  font-size: large;
+  font-weight: 600;
 }
