--- a/frontend/src/css/Donate.css
+++ b/frontend/src/css/Donate.css
@@ -4,42 +4,95 @@
   font-family: "Nunito", sans-serif;
 }
 
-.donate {
-  background-repeat: no-repeat;
-  margin-left: 0%;
-  /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSB1lN1hGZAj0MpZ1ZoN7tt7q38JyzTvjmSMQ&usqp=CAU"); */
-  background-size: cover;
-  background-size: 100rem;
-  flex: 1;
+.donate_instru{
+  width: 80vw;
+  margin: auto;
+  height: max-content;
+  margin-bottom: 2rem;
+ 
+}
+.donate_content{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
 }
 
+.donate_content img{
+  width:  15vw;
+  position: relative;
+  
+  right: 0;
+}
+.donate {
+  height: 40rem;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+  background: rgb(237, 255, 254);
+  background-image: url('../../public/ui1.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  
+
+}
+
+.donate ul{
+  width: max-content;
+}
+
+.points{
+  text-align: left;
+}
+.donate #donui{
+  opacity: 0.8;
+ 
+  
+}
+
+#dcurve{
+  transform: rotate(270deg);
+  position: absolute;
+  right: 0;
+  width: 30vw;
+  opacity: 0.7;
+  filter:brightness(24);
+  filter: hue-rotate(336deg);
+  
+  opacity: 0.6;
+  z-index: 0;
+}
 .donateForm {
   text-align: center;
   background-color: #fbfbfb;
+  box-shadow: 2px 2px 8px rgb(234, 234, 234);
   padding: 30px;
-  border-radius: 1rem;
-  width: 24rem;
-  height: 23rem;
-  box-shadow: 2px 2px 9px rgb(220, 220, 220);
+  border-radius: 0.5rem;
+  width: 25vw;
+  height: 30rem;
+  position: relative;
+  margin-top: auto;
+  margin-bottom: auto;
+  min-width: 22rem;
 }
 
 .loginForm2 {
+  
   background-color: #ffffff;
   padding: 20px;
   margin-top: 5px;
   border: 1px solid rgb(129, 121, 121);
-  border-radius: 1rem;
+  border-radius: 0.1rem;
+  
 }
 
-.donate input {
+.donate .donateForm input {
   height: 3.5rem;
-  border-radius: 1.2rem;
+  border-radius: 0.5rem;
   border: none;
-
+  width:70% ;
   margin-top: 0.8rem;
+  outline: none;
+  background: rgb(255, 255, 255);
+  color: #000000;
 }
 
 #donate-btn {
@@ -54,4 +107,258 @@
   padding: 5px 10px;
   cursor: pointer;
 
+}
+
+.button-53 {
+  background-color: #b7ffe7;
+  border: 0 solid #E5E7EB;
+  box-sizing: border-box;
+  color: #000000;
+  display: flex;
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  position: relative;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 60%;
+  max-width: 460px;
+  position: relative;
+  cursor: pointer;
+  
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  text-align: center;
+  margin: auto;
+  margin-top: 2rem;
+}
+
+.button-53:focus {
+  outline: 0;
+}
+
+.button-53:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+
+.button-53:hover:after {
+  bottom: 2px;
+  left: 2px;
+}
+
+.suggestions{
+  position: relative;
+  z-index: 24;
+  margin-top: 3rem;
+  margin-bottom: auto;
+  background: rgb(255, 255, 255);
+  width: 22vw;
+  min-width: 20rem;
+  border-radius: 0.5rem;
+}
+
+.suggestions.active{
+  display: none;
+
+}
+.suggestions.false{
+  animation-name: wid;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  
+}
+.suggestions.false ul h2{
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  animation-duration: 1s;
+  opacity: 0;
+  font-size: 2vw;
+  visibility: hidden;
+  text-align: center;
+  height: max-content;
+  margin: auto;
+
+
+}
+.suggestions.false ul h3{
+  visibility: hidden;
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  animation-duration: 1.5s;
+  opacity: 0; 
+  font-size: 1.2rem;
+  text-align:left;
+  
+ 
+
+}
+
+@keyframes pAnimation {
+  0% {
+    visibility: hidden;
+    opacity: 0.1;
+    
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes wid {
+  0% {
+    
+    width: 0;
+    
+  }
+  100% {
+    width: 22vw;
+    
+  }
+}
+
+.suggestions ul{
+  text-align: left;
+
+  
+}
+.suggestions ul li{
+  
+
+}
+.suggestions ul h2{
+  font-size: 1.7vw;
+  text-align: center;
+  height: max-content;
+  margin: auto;
+
+
+}
+.suggestions ul h3{
+  font-size: 1vw;
+  text-align:left;
+  
+ 
+
+}
+
+
+@media screen and (max-width: 1000px){
+  .button-53 {
+    padding: .75rem 3rem;
+    font-size: 1.25rem;
+  }
+
+  .donate_instru{
+    font-size: 3vw;
+    width: 80vw;
+    margin: auto;
+    height: max-content;
+    margin-bottom: 2rem;
+   
+  }
+  .donate_content{
+    display: block;
+    
+  }
+  .donate_content img{
+    width:  30vw;
+    position: relative;
+    
+    right: 0;
+  }
+  .donate_content p{
+    font-size: 4vw;
+   position: relative;
+   z-index: 2;
+  }
+  #dcurve{
+    transform: rotate(270deg);
+    position: absolute;
+    margin-top: -10rem;
+    right: 0;
+    width: 50vw;
+    opacity: 0.7;
+    filter:brightness(24);
+    filter: hue-rotate(336deg);
+    opacity: 0.6;
+    z-index: 0;
+  }
+  .donate {
+    height: 60rem;
+    margin-top: 5rem;
+    width: 100%;
+    display: block;
+    background: rgb(237, 255, 254);
+    background-image: url('../../public/ui1.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding-top: 0.5rem;
+    
+  }
+  .donateForm {
+    text-align: center;
+    background-color: #fbfbfb;
+    box-shadow: 2px 2px 8px rgb(234, 234, 234);
+    border-radius: 0.5rem;
+    width: 75%;
+    height: 30rem; 
+    margin: auto;
+    margin-top: 3rem;
+    min-width: 60%;
+  }
+
+  .suggestions.false ul h2{
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  animation-duration: 1s;
+  opacity: 0;
+  font-size: 5vw;
+  visibility: hidden;
+  text-align: center;
+  height: max-content;
+  margin: auto;
+  
+
+}
+.suggestions{
+  position: relative;
+  z-index: 24;
+  margin-top: 3rem;
+  margin-bottom: auto;
+  background: rgb(255, 255, 255);
+  width: 80vw;
+  min-width: 80vw;
+  border-radius: 0.5rem;
+  margin: auto;
+  margin-bottom: 3rem;
+  min-height: 3rem;
+}
+.suggestions.false h2{
+    
+}
+
+.suggestions.active{
+  display: none;
+
+}
+.suggestions.false{
+  animation-name: wid;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
 }
