--- a/frontend/src/css/Orders.css
+++ b/frontend/src/css/Orders.css
@@ -4,10 +4,10 @@
   font-family: "Nunito", sans-serif;
 }
 
-.donate {
+/* .donate {
   background-repeat: no-repeat;
   margin-left: 0%;
-  /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSB1lN1hGZAj0MpZ1ZoN7tt7q38JyzTvjmSMQ&usqp=CAU"); */
+ 
   background-size: cover;
   background-size: 100rem;
   flex: 1;
@@ -15,9 +15,9 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-}
+} */
 
-.donateForm {
+/* .donateForm {
   background-color: #fbfbfb;
   padding: 30px;
   border-radius: 1px;
@@ -27,11 +27,11 @@
   box-shadow: 2px 2px 9px rgb(191, 191, 191);
   align-items: center;
   text-align: center;
-}
-
+} */
+/* 
 .donateForm .logo{
  text-align: center;
-}
+} */
 
 .loginForm2 {
   background-color: #ffffff;
