--- a/frontend/src/css/SignUp.css
+++ b/frontend/src/css/SignUp.css
@@ -1,25 +1,90 @@
+.mainsignup{
+  height: 40rem;
+}
+
 .signUp {
-  height: 38rem;
   display: flex;
   justify-content: space-between;
   box-shadow: 2px 2px 9px rgb(170, 170, 170);
-  margin-left: 8rem;
-  margin-right: 8rem;
+  width: 80vw;
+  height: max-content;
   border-radius: 2rem;
+  height: 38rem;   
+  margin: auto;
+  margin-top: 5rem;
+}
+.signUp .left{
+  background: rgb(8,70,119);
+  background: linear-gradient(90deg, rgb(27, 95, 147) 0%, rgb(144, 218, 255) 100%);
+  width: 50rem;
+  text-align: center;
+  border-radius: 2rem;
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  overflow: hidden;
+ 
+}
+.signUp .left .cover{
+  position: absolute;
+  width: 50rem;
+  background: linear-gradient(90deg, rgb(27, 95, 147) 0%, rgb(144, 218, 255) 100%);
+  height: 27rem;
+  z-index: 254;
+  margin-top: 8rem;
+  animation-delay: 2s;
+  animation-name: slide2;
+  
+  animation-direction: reverse;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  overflow: hidden;
+  opacity: 0;
+  
+}
+.signUp .left img{
+  width:32vw;
+  margin-top:2rem;
+  animation-name:pAnimation;
+  animation-duration: 2.5s;
+  animation-fill-mode: forwards;
+  animation-delay: 2s;
+  visibility: hidden;
+  opacity: 0;
+  border-radius: 2rem;
+  position: relative;
+  z-index: 2;
 }
 
-.form {
- background-color: #ffffff;
-  padding: 30px;
-  width: 24rem;
-  height: 23rem;
-  margin-right: 6rem;
-  padding-top: 4rem;
+.signUp .left h1{
+  text-align: center;
+  width: 42vw;
+  color: #ffffff;
+  position: relative;
+  padding-top: 2rem;
   animation-duration: 3s;
   animation-name:pAnimation;
   animation-fill-mode: forwards;
   visibility: hidden;
   opacity: 0;
+  z-index: 25;
+}
+ 
+.form {
+  border-radius: 2rem;
+  background-color: #ffffff;
+  padding: 30px;
+  width: 24vw;
+  height: 23rem;
+  margin: auto;
+  padding-top: 1rem;
+  animation-duration: 3s;
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  opacity: 0;
+  text-align: center;
+  
 }
 .signUpLogo {
   width: 200px;
@@ -27,60 +92,167 @@
   padding: 10px 0px;
 }
 
-.loginPara {
-  color: rgba(var(--f52, 142, 142, 142), 1);
-  font-size: 17px;
-  font-weight: 600;
-  line-height: 20px;
-  margin: 0px 40px 20px 40px;
-}
 
-input {
+
+.signUp input {
 
   height: 3.5rem;
   border-radius: 1.2rem;
   border: none;
   background-color: rgb(243, 251, 255);
-  padding-left: 1.5rem;
+  padding-left: 2rem;
   margin-top: 0.8rem;
-
-  outline: none;
-  font-size: 16px;
-  width: 100%;
-  box-sizing: border-box;
+  width: 20vw;
+  max-width: 15vw;
 }
 
-.form > div {
-  width: 80%;
-  margin: auto;
-}
+
 
 #submit-btn {
-  border-radius: 2rem;
+  font-size: 1rem;
+  margin-top: 1rem;
+  border-radius: 1.2rem;
+  border: none;
   background-color: rgba(0,168,255,1);
-
+  border: none;
   color: white;
   font-weight: bold;
   padding: 5px 10px;
-  width: 80%;
   cursor: pointer;
-  margin-top: 2rem;
+  width: 12rem;
 }
 
 .form2 {
   background-color: #fff;
   padding-right: 5rem;
-  margin-top: 3rem;
-  
+  text-align: center;
+  margin-top: 5rem;
+  padding-left: 4rem;
+  animation-duration: 3s;
+  animation-name:pAnimation;
+  animation-fill-mode: forwards;
+  visibility: hidden;
+  opacity: 0;
 }
-
+#roles{
+  width: 20vw;
+  margin: auto;
+  margin-top: 2rem;
+}
 #role{
+  margin: auto;
   border: none;
-  margin-top: 1.5rem;
-  margin-left: 5rem;
+  margin-left: 1rem;
   background-color: rgb(243, 251, 255);
   width: 6rem;
   height: 2rem;
   font-size: 1rem;
 }
 
+@media screen and (max-width: 1000px){
+  /*nav part already in landing.css*/
+  .signUp {
+    display: block;
+    box-shadow: none;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    border-radius: 0rem;
+    height: max-content;
+    margin-top: 2rem;
+    width: 100vw;
+  }
+  .signUp .left{
+  margin: auto;
+  height: 12rem;
+  background: rgb(8,70,119);
+  background: linear-gradient(90deg, rgb(27, 95, 147) 0%, rgb(144, 218, 255) 100%);
+  width: 90vw;
+  border-radius: 2rem;
+  animation-name: slide;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  text-align: center;
+   
+  }
+  .middle{
+    display: none;
+    
+  }
+  .signUp .left h1{
+    text-align: center;
+    width: 90vw;
+    color: #ffffff;
+    position: absolute;
+    padding-top: 2rem;
+    animation-duration: 3s;
+    animation-name:pAnimation;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 25;
+  }
+
+  .signUp .left img{
+    width:15rem;
+    margin-top:1rem;
+    animation-name:pAnimation;
+    animation-duration: 2.5s;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    opacity: 0;
+    border-radius: 2rem;
+    position: relative;
+    z-index: 2;
+  }
+  .form {
+    background-color: #ffffff;
+    padding: 0;
+    width: 100vw;
+    height: max-content;
+    margin-right: 0rem;
+    padding-top: 2rem;
+    animation-duration: 3s;
+    animation-name:pAnimation;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    opacity: 0; 
+    
+  }
+  .signUp input {
+
+    height: 3.5rem;
+    border-radius: 1.2rem;
+    border: none;
+    background-color: rgb(243, 251, 255);
+    padding-left: 2rem;
+    margin-top: 0.8rem;
+    width: 70vw;
+    max-width: none;
+  }
+  #roles{
+    width: 80vw;
+    margin: auto;
+    margin-top: 2rem;
+  }
+  #role{
+    margin: auto;
+    border: none;
+    background-color: rgb(243, 251, 255);
+    width: 6rem;
+    margin-left: 1rem;
+    height: 2rem;
+    font-size: 1rem;
+  }
+  .form2 {
+    padding-left: 4rem;
+    background-color: #fff;
+    padding-right: 5rem;
+    text-align: center;
+    margin-top: 3rem;
+    
+    
+  }
+  .signUp .left .cover{
+    display: none;
+  }
+}
