--- a/frontend/src/css/Orders.css
+++ b/frontend/src/css/Orders.css
@@ -65,23 +65,68 @@
 } */
 
 .allCards {
-  width: 90vw;
+  
+  width: 100vw;
   margin: auto;
   height: max-content;
   background: rgb(241, 251, 255);
+  background-image: url("../../public/list.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position:top right;
+  background-attachment: fixed;
+  position: relative;
+  padding: 1px;
   
-
 }
 .OCards {
+  font-size: 1rem;
+  position: relative;
   width: 85vw;
   margin: auto;
+  height: max-content;
+  margin-top:2rem;
+  
+}
+
+.OCards .button-53{
+  background-color: #b7ffe7;
+  border: 0 solid #E5E7EB;
+  box-sizing: border-box;
+  color: #000000;
+  display: flex;
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  position: relative;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 10%;
+  max-width: 10%;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  text-align: center;
+  margin: auto;
+  margin-left: 0;
+  
 }
 
 .OCards .card {
+  margin-top: 1rem;
   max-width: 100%;
   width: 100%;
   border: none;
   background: white;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 8px #bebebe;
+  
 }
 
 .OCards .card-body{
@@ -89,8 +134,7 @@
   outline: none;
   border: none;
   display: flex;
-  
-  
+
   
 }
 .OCards .card-text{
@@ -102,23 +146,61 @@
   
 }
 
-.OCards p{
+.OCards p{  
   width: 15vw;
 } 
 
+.OCards .content-details{
+  display: none;
+}
 
+.headd{
+  
+}
+
+.heading{
+  box-shadow: 2px 2px 8px #cfcfcf;
+  height: max-content;
+  width: 85vw;
+  font-size: 1.3rem;
+  font-weight: 600;
+  outline: none;
+  border: none;
+  display: flex;
+  justify-content: flex-start;
+  background: white;
+  border-radius: 1rem;
+}
+.heading img{
+  padding-left: 1rem;
+  float: left;
+  margin-top: auto;
+  width: 2rem;
+  
+}
+#action{
+  width: 8vw;
+}
 
 #title{
   
   font-size: 1.1rem;
-  background-color: rgb(125, 212, 255);
+  font-weight: 600;
   margin: 1rem;
   border-radius: 1rem;
-  color: white;
+
   height: 2.5rem;
   padding-top: 1rem;
  
   width: 14vw;
+}
+
+#title img{
+  width: 1.5rem;
+  float:left;
+}
+#mobpill{
+  display: none;
 }
 
 #req_button{
@@ -156,14 +238,109 @@
 }
 
 
-
-@media (min-width: 768px) {
-  #req_button{
-    padding: 1rem 2rem;
+@media screen and (max-width: 1000px){
+  .OCards .card {
+    margin-top: 1rem;
+    max-width: 100%;
+    width: 100%;
+    border: none;
+    background: white;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 8px #bebebe;
+    text-align: center;
   }
+  .OCards .card-body{
+    margin: auto;
+    width: 100%;
+    outline: none;
+    border: none;
+    display: block;
+  
+    
+  }
+  .OCards .card-text{
+    margin: auto;
+    text-align: center;
+    width: 90%;
+    outline: none;
+    border: none;
+    display: block;
+    justify-content: flex-start;
+    
+  }
+  .OCards p{  
+    width: 100%;
+    display: flex;
+  } 
+  .OCards .content-details{
+    display: block;
+    margin-right: 0.5rem;
+  }
+
+  
+#title{
+  
+  font-size: 1.1rem;
+  margin: 1rem;
+  border-radius: 1rem;
+  height: 2.5rem;
+  padding-top: 1rem;
+  width: 80%;
 }
 
+.heading{
+  box-shadow: 2px 2px 8px #cfcfcf;
+  height: 7rem;
+  width: 85vw;
+  
+  font-weight: 600;
+  outline: none;
+  border: none;
+  display: flex;
+  justify-content: flex-start;
+  background: white;
+  border-radius: 1rem;
+}
+.heading img{
+  
+  margin: auto;
+  width: 5rem;
+}
+.heading .headp{
+  display: none;
+}
+#mobpill{
+  display: block;
+}
+.OCards .button-53{
+  background-color: #b7ffe7;
+  border: 0 solid #E5E7EB;
+  box-sizing: border-box;
+  color: #000000;
+  display: flex;
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  position: relative;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 100%;
+  max-width: 70%;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  text-align: center;
+  margin: auto;
+  margin-top: 2rem;
+  
 
-
-
+  
+}
+}
 
