--- a/frontend/src/css/Volunteer.css
+++ b/frontend/src/css/Volunteer.css
@@ -66,17 +66,22 @@
 .volunteer_cunt .vpending{
   position: relative;
   z-index: 2;
-  margin-top: 1rem;
+  
   height: max-content;
   min-height: 7rem;
   width: 92%;
   border: none;
   background: white;
-  border-radius: 1rem;
-  box-shadow: 1px 1px 8px #e0e0e0;
+
+  box-shadow: 6px 2px  11px #e0e0e0;
   display: flex;
   justify-content: flex-start;
   
+}
+.volunteer_cunt .vpending:hover{
+  min-height: 7.5rem;
+  width: 93%;
+  box-shadow: 2px 2px 8px #9e9e9e;
 }
 
 .volunteer_cunt .vpending p{
