--- a/frontend/src/css/SignUp.css
+++ b/frontend/src/css/SignUp.css
@@ -27,7 +27,7 @@
 }
 .signUp .left .cover{
   position: absolute;
-  width: 50rem;
+  width: 42vw;
   background: linear-gradient(90deg, rgb(27, 95, 147) 0%, rgb(144, 218, 255) 100%);
   height: 27rem;
   z-index: 254;
