--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -4,6 +4,14 @@
   font-family: "Nunito", sans-serif;
 }
 
+.profilediv .bodyy{
+  margin: auto;
+  width: 100vw;
+  height: max-content;
+  min-height: 120vh;
+  background: #ffffff;
+  padding-top: 1px;
+}
 /* .donate {
   background-repeat: no-repeat;
   margin-left:0%;
@@ -15,60 +23,111 @@
   justify-content: center;
   align-items: center;
 } */
-.contentt{
-  margin-top: 7rem;
-  width: 80%;
+.profilediv .contentt{
+ 
+  margin: auto;
+  margin-top: 2rem;
+  width: 85vw;
+  box-shadow: 2px 2px 9px rgb(225, 225, 225);
 }
-.contentt h1{
-  text-align: start;
-  padding-left: 6rem;
+
+.contentt .userdet{
+  position: relative;
+  z-index: 2;
+  box-shadow: 2px 2px 9px rgb(216, 216, 216);
+  background: rgb(255, 255, 255);
+  height: 13rem;
+  display: flex;
+  justify-content: space-evenly;
 }
-.contentt ul li{
+.contentt .userdet img{
+  
+  height: 10rem;
+  margin: auto;
+  margin-left: 5rem;
+  padding: 1rem;
+  border-radius: 50%;
+  box-shadow: 2px 2px 8px rgb(233, 233, 233);
+}
+
+.userdet h1{
+  width: 30vw;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.userdet #credits{
+  width: 30vw;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-top: 1rem;
+}
+
+#credits img{
+  height: 10rem;
+  margin: auto;
+  margin-left: 0rem;
+  padding: 0rem;
+  border-radius: 0%;
+  box-shadow:none;
+}
+
+.contentt .donatedorders{
+  position: relative;
+  z-index: 1;
+  background: hsl(191, 100%, 98%);
+  padding-top: 0.1px;
+  height: max-content;
+  padding-bottom: 2rem;
+}
+
+.contentt h2{
+  margin: 0rem;
+  margin-top: 1rem;
+}
+
+.contentt ul{
+  box-shadow: 2px 2px 8px rgb(247, 247, 247);
   width: 90%;
-  height: min-content;
-  align-items: center;
-}
-
-.contentt  li .p1{
-  margin-left: 4rem;
-  width: 100%;
-  text-align: start;
-}
-
-.contentt  li .p2{
-  text-align: center;
-  margin-right: 2rem;
-  width: 100%;
+  background: white;
+  margin: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
  
+  padding-top: 0.1px;
 }
-
-.contentt  li .p3{
-  text-align: center;
-  margin-right: 2rem;
-  width: 100%;
- 
+.contentt .proul{
+  padding-left: 0;
 }
-.contentt  li .pm{
-  text-align: start;
-  margin-right: 2rem;
-  width: 100%;
- 
+.contentt .donatedorders img{
+  width: 2rem;
+  margin-left: 1rem;
 }
-
-/* .donateForm {
-  background-color: #fbfbfb;
-  padding: 30px;
-
-  border-radius: 1rem;
-  width: 24rem;
-  height: 23rem;
-
-} */
-
-#credits {
-float: right;
+.contentt .proul .profli{
+    width: 98%;
+    background: white;
+    display: flex;
+    justify-content: flex-start;
+    box-shadow: 2px 2px 9px rgb(238, 238, 238);
 }
-
+.contentt .proul .profli  h3{
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 22vw;
+}
+.procont {
+  padding-left: 0;
+}
+.procont .proco{
+  box-shadow: 2px 2px 6px rgb(251, 251, 251);
+  width: 98%;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    height: max-content;
+}
+.procont .proco p{
+  width: 22vw;
+}
 .loginForm2 {
   background-color: #ffffff;
   padding: 20px;
@@ -100,15 +159,128 @@ float: right;
   cursor: pointer;
 }
 
-
-#lin{
-  width: 80%;
-  margin-top: 3rem;
-  margin-bottom: 2rem;
+.contentt .requestorders{
+  padding-bottom: 3rem;
 }
 
+.contentt .requestorders img{
+  width: 2rem;
+  margin-left: 1rem;
+ 
+}
 
-.procont{
- margin-left: 8%;
-  width: 100%;
+.contentt  .myappoint{
+  position: relative;
+  z-index: 1;
+  background: hsl(191, 100%, 98%);
+  padding-top: 0.1px;
+  height: max-content;
+  padding-bottom: 2rem;
+}
+
+.contentt .myappoint img{
+  width: 2rem;
+  margin-left: 1rem;
+
+}
+
+.contentt .appointm{
+  padding-bottom: 3rem;
+}
+
+.contentt .appointm img{
+  width: 2rem;
+  margin-left: 1rem;
+ 
+}
+
+@media screen and (max-width: 1000px) {
+  .profilediv .contentt{
+    margin: auto;
+    margin-top: 2rem;
+    width: 95vw;
+    box-shadow: 2px 2px 9px rgb(225, 225, 225);
+  }
+  .contentt .userdet{
+    position: relative;
+    z-index: 2;
+    box-shadow: 2px 2px 9px rgb(216, 216, 216);
+    background: rgb(255, 255, 255);
+    height: max-content;
+    display: block;
+    margin: auto;
+    text-align: center;
+  }
+  .contentt .userdet img{
+    height: 8rem;
+    margin: auto;
+    margin-left: 0rem;
+    margin-top: 1rem;
+    padding: 1rem;
+    border-radius: 50%;
+    box-shadow: 2px 2px 8px rgb(233, 233, 233);
+  }
+  .userdet h1{
+    width: 90%;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  .userdet #credits{
+    width: 30vw;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 1rem;
+  }
+
+
+  .contentt .donatedorders{
+    position: relative;
+    z-index: 1;
+    background: hsl(191, 100%, 98%);
+    padding-top: 0.1px;
+    height: max-content;
+    padding-bottom: 2rem;
+  }
+  
+  .contentt h2{
+    margin: 0rem;
+    margin-top: 1rem;
+  }
+  
+  .contentt ul{
+    box-shadow: 2px 2px 8px rgb(247, 247, 247);
+    width: 95%;
+    background: white;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-top: 0.1px;
+  }
+  .contentt .proul{
+    padding-left: 0;
+  }
+  .contentt .proul .profli{
+    display: none;
+}
+.contentt .proul .profli  h3{
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 22vw;
+}
+.procont {
+  padding-left: 0;
+}
+.procont .proco{
+  box-shadow: 2px 2px 6px rgb(251, 251, 251);
+  width: 98%;
+  margin:auto;
+  display: block;
+  height: max-content;
+  
+}
+.procont .proco p{
+  margin-top: 1rem;
+  width: 90%;
+}
 }
